--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,6 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+@import "~selectize/dist/css/selectize.css";
+@import "~selectize/dist/css/selectize.bootstrap3.css";
